--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,17 @@
         <activity
             android:name=".View.TelaCorpo"
             android:label="@string/app_name"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".View.TelaRespostas"
+            android:label="@string/title_activity_tela_respostas"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".View.TelaFormulario"
+            android:label="@string/title_activity_tela_formulario"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,13 +28,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".View.TelaRespostas"
-            android:label="@string/title_activity_tela_respostas"
-            android:screenOrientation="landscape">
-        </activity>
-        <activity
-            android:name=".View.TelaFormulario"
-            android:label="@string/title_activity_tela_formulario"
+            android:name=".View.TelaCostas"
+            android:label="@string/title_activity_tela_costas"
             android:screenOrientation="landscape" >
         </activity>
     </application>
