--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="diariodedor.pucsp.com.diariodedor" >
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.read_external_storage"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
