--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="diariodedor.pucsp.com.diariodedor" >
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.read_external_storage"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.read_external_storage" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -35,6 +35,10 @@
             android:name=".View.TelaCostas"
             android:label="@string/title_activity_tela_costas"
             android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".View.TelaListaDiario"
+            android:label="@string/title_activity_tela_lista_diario" >
         </activity>
     </application>
 
